@@ -3,6 +3,7 @@
 == Version 2.5.0 (2023-xx-xx)
 
 * Removed experimental :check_offset and :adjust_offset parameters.
+* Nested tracing is no longer an error.
 
 == Version 2.4.15 (2023-02-07)
 
